force-app/main/default/objects/STATS_OPPOR__c/STATS_OPPOR__c.object-meta.xml
<CustomObject>
    <label>STATS_JUIN</label>
    <nameField>
        <displayFormat>STAT-{00000000}</displayFormat>
        <label>Nom de STATS_OPPOR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STATS_OPPOR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>