force-app/main/default/objects/STATS_OPPOR__c/fields/A_refaire__c.field-meta.xml
<CustomField>
    <fullName>A_refaire__c</fullName>
    <label>A refaire</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>