force-app/main/default/objects/STATS_OPPOR__c/fields/PbCase__c.field-meta.xml
<CustomField>
    <fullName>PbCase__c</fullName>
    <label>PbCase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>