force-app/main/default/objects/STATS_OPPOR__c/fields/STATS_MENSUELS__c.field-meta.xml
<CustomField>
    <fullName>STATS_MENSUELS__c</fullName>
    <label>STATS MENSUELS</label>
    <referenceTo>STATS_MENSUELS__c</referenceTo>
    <relationshipName>STATS_OPPOR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>