force-app/main/default/objects/STATS_OPPOR__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <label>Urgent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>